--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -333,20 +333,23 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!-- app.component.html -->
 <header class="header">
   <div class="logo-container">
-    <a href="/">
-      <img src="assets/images/iswiblogo.png" alt="ISWIB Logo" class="logo">
+    <a routerLink="/">
+      <img src="assets/images/iswiblogo.png" alt="ISWIB Logo" class="logo" />
     </a>
   </div>
 </header>
+
 <main class="main-content">
-  <h1>{{ title }}</h1>
-  <app-map></app-map> <!-- Sada Angular prepoznaje ovu komponentu -->
+  <router-outlet></router-outlet>
 </main>
+
 <footer class="footer">
   <p>&copy; 2025 ISWIB. All rights reserved.</p>
 </footer>
+
 
 
 
