--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,20 +1,52 @@
-.main-page {
-    text-align: center;
-    margin-top: 50px;
-  
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      text-decoration: none;
-      background-color: #007acc;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-      transition: background-color 0.3s;
-  
-      &:hover {
-        background-color: #005f99;
-      }
-    }
-  }
-  
+.main-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: calc(100vh - 100px);  /* Prilagodite visinu u odnosu na header i footer */
+  flex-direction: column;
+  padding: 20px;
+}
+
+.circle-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 kolone */
+  gap: 20px;
+  width: 100%;
+  max-width: 1200px; /* Opcionalno, da se ograniči širina */
+}
+
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  cursor: pointer;
+}
+
+.circle-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 10px;
+  transition: transform 0.3s ease;
+}
+
+.circle:hover .circle-image {
+  transform: scale(1.1); /* Povećanje slike pri hoveru */
+}
+
+.circle p {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #333;
+}
