--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -347,7 +347,7 @@
 </main>
 
 <footer class="footer">
-  <p>&copy; 2025 ISWIB. All rights reserved.</p>
+  <p>&copy; 2025 ISWIB. All rights reserved. Made by IT Team, and friends ®</p>
 </footer>
 
 
