--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #f8f4f1;
+  background-color: #5566ca;
   padding: 20px;
   text-align: center;
 }
@@ -20,7 +20,7 @@
 }
 
 .footer {
-  background-color: #333;
+  background-color: #5566ca;
   color: #fff;
   padding: 10px;
   text-align: center;
