--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -4,6 +4,7 @@
   align-items: center;
   min-height: calc(100vh - 100px);  /* Prilagodite visinu u odnosu na header i footer */
   flex-direction: column;
+  background-color: #161139;
   padding: 20px;
 }
 
@@ -48,5 +49,5 @@
 .circle p {
   font-size: 1rem;
   font-weight: bold;
-  color: #333;
+  color: #ffffff;
 }
