--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,8 @@
 /* Globalne promenljive boja */
 $primary-color: #007bff;
 $secondary-color: #6c757d;
-$background-color: #f8f9fa;
-$text-color: #333;
+$background-color: #161139;
+$text-color: #ffffff;
 $border-color: #ccc;
 
 /* Resetovanje osnovnih stilova */
