--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -10,8 +10,8 @@
       </a>
     </div>   
 
-    <div class="Mapa">
-      <a routerLink="/mapa">
+    <div class="Maps">
+      <a routerLink="/maps">
         <div class="circle-content">
           <div class="circle-image" style="background-image: url('assets/images/mapa.jpg');"></div>
           <p>Maps</p>
@@ -58,7 +58,7 @@
     <div class="radionice">
       <a routerLink="/radionice">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/radionice.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/radionice.png');"></div>
           <p>Workshops</p>
         </div>
       </a>
@@ -73,11 +73,11 @@
       </a>
     </div>
 
-    <div class="faq">
-      <a routerLink="/faq">
+    <div class="more">
+      <a routerLink="/more">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/faq.jpg');"></div>
-          <p>FAQ</p>
+          <div class="circle-image" style="background-image: url('assets/images/morepage.jpg');"></div>
+          <p>More...</p>
         </div>
       </a>
     </div>
