--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="Emergencies">
-      <a routerLink="/hitno">
+      <a routerLink="/emergency-contacts">
         <div class="circle-content">
           <div class="circle-image" style="background-image: url('assets/images/hitno.jpg');"></div>
           <p>Emergencies</p>
