Tvoj opis commita

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,7 +2,7 @@
   <div class="circle-container">
 
     <div class="Raspored">
-      <a routerLink="/raspored">
+      <a routerLink="/calendar">
         <div class="circle-content">
           <div class="circle-image" style="background-image: url('/assets/images/raspored.jpg');"></div>
           <p>Calendar</p>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="event">
-      <a routerLink="/event">
+      <a routerLink="/events">
         <div class="circle-content">
           <div class="circle-image" style="background-image: url('assets/images/event.jpg');"></div>
           <p>Events</p>
