Tvoj opis commita

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -34,13 +34,13 @@
 
 <div class="footer-icons">
   <a href="https://pinterest.com/your-board" target="_blank" class="circle-icon pinterest" title="Pinterest Board">
-    <img src="assets/icons/pinterest.svg" alt="Pinterest" />
+    <img src="assets/images/pinterest.png" alt="Pinterest" />
   </a>
   <a href="https://deezer.com/your-playlist" target="_blank" class="circle-icon deezer" title="Deezer Playlist">
-    <img src="assets/icons/deezer.svg" alt="Deezer" />
+    <img src="assets/images/deezer.png" alt="Deezer" />
   </a>
   <a href="https://drive.google.com/your-folder" target="_blank" class="circle-icon drive" title="Upload to Drive">
-    <img src="assets/icons/drive.svg" alt="Google Drive" />
+    <img src="assets/images/drive.png" alt="Google Drive" />
   </a>
 </div>
 
