--- a/src/app/components/lost-and-found/lost-and-found-page.component.html
+++ b/src/app/components/lost-and-found/lost-and-found-page.component.html
@@ -1,6 +1,6 @@
 <main class="lost-and-found-page">
   <h1>Lost and Found</h1>
   <div class="image-container">
-    <img src="/assets/images/swibilost (1).png" alt="Lost and Found" />
+    <img src="/assets/images/swibilost.png" alt="Lost and Found" />
   </div>
 </main>
