--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -4,7 +4,7 @@
     <div class="Raspored">
       <a routerLink="/calendar">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('/assets/images/raspored.jpg');"></div>
+          <div class="circle-image" style="background-image: url('/assets/images/raspored.png');"></div>
           <p>Calendar</p>
         </div>
       </a>
@@ -13,16 +13,16 @@
     <div class="Maps">
       <a routerLink="/maps">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/mapa.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/mapa.png');"></div>
           <p>Maps</p>
         </div>
       </a>
     </div>
 
     <div class="Hrana">
-      <a routerLink="/hrana">
+      <a routerLink="/menu">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/hrana.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/hrana.png');"></div>
           <p>Food</p>
         </div>
       </a>
@@ -31,7 +31,7 @@
     <div class="Emergencies">
       <a routerLink="/emergency-contacts">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/hitno.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/hitno.png');"></div>
           <p>Emergencies</p>
         </div>
       </a>
@@ -40,7 +40,7 @@
     <div class="event">
       <a routerLink="/events">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/event.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/events.png');"></div>
           <p>Events</p>
         </div>
       </a>
@@ -49,14 +49,14 @@
     <div class="igrica">
       <a routerLink="/igrica">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/igrica.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/igrica.png');"></div>
           <p>Game</p>
         </div>
       </a>
     </div>
 
     <div class="radionice">
-      <a routerLink="/radionice">
+      <a routerLink="/workshops">
         <div class="circle-content">
           <div class="circle-image" style="background-image: url('assets/images/radionice.png');"></div>
           <p>Workshops</p>
@@ -67,7 +67,7 @@
     <div class="lost">
       <a routerLink="/lost-and-found">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/lost-and-found.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/lost-and-found.png');"></div>
           <p>Lost & Found</p>
         </div>
       </a>
@@ -76,7 +76,7 @@
     <div class="more">
       <a routerLink="/more">
         <div class="circle-content">
-          <div class="circle-image" style="background-image: url('assets/images/morepage.jpg');"></div>
+          <div class="circle-image" style="background-image: url('assets/images/more.png');"></div>
           <p>More...</p>
         </div>
       </a>
