Tvoj opis commita

--- a/src/app/components/bottom-nav/bottom-nav.component.html
+++ b/src/app/components/bottom-nav/bottom-nav.component.html
@@ -1,7 +1,9 @@
 <nav class="bottom-nav">
-    <ul>
-        <li *ngFor="let item of navItems" (click)="navigate(item.route)">
-            <span class="emoji">{{ item.icon }}</span>
-        </li>
+  <div class="nav-scroll-wrapper">
+    <ul class="nav-scroll-content">
+      <li *ngFor="let item of navItems" (click)="navigate(item.route)">
+        <img [src]="item.icon" alt="icon" class="nav-icon" />
+      </li>
     </ul>
+  </div>
 </nav>
