--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -46,8 +46,8 @@
       </a>
     </div>
 
-    <div class="igrica">
-      <a routerLink="/igrica">
+    <div class="game">
+      <a routerLink="/game">
         <div class="circle-content">
           <div class="circle-image" style="background-image: url('assets/images/igrica.png');"></div>
           <p>Game</p>
