--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="main-container">
 
   <header class="header">
-    <div class="back-button-container">
-      <a [routerLink]="''" class="back-button">
-        <img src="/assets/images/back-icon.png" alt="Back" />
-      </a>
-    </div>
+    <a [routerLink]="getBackRoute()" class="back-button">
+    <img src="/assets/images/back-icon.png" alt="Back" />
+    </a>
+
+
+
 
     <div class="logo-container">
       <a routerLink="/">
