Tvoj opis commita

--- a/src/app/components/bottom-nav/bottom-nav.component.html
+++ b/src/app/components/bottom-nav/bottom-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="bottom-nav">
+<nav class="bottom-nav hide-at-index">
   <div class="nav-scroll-wrapper">
     <ul class="nav-scroll-content">
       <li *ngFor="let item of navItems" (click)="navigate(item.route)">
