--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 /* Za celo telo i html */
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
 }
@@ -14,11 +15,15 @@ html, body {
 
 /* Header */
 .header {
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  width: 100%;
+  justify-content: space-between; /* Ako imaš više elemenata (npr. back dugme i logo) */
+  box-sizing: border-box;
+  background-image: url("../assets/images/header-bg.webp");
+  background-size: cover; // Dodato za cover efekat
+  background-position: center; // Dodato za centriranje
+  padding: 20px 20px;
 }
 
 .back-button-container {
@@ -27,17 +32,24 @@ html, body {
 }
 
 .back-button img {
-  width: 30px;
-  height: 30px;
+  position: absolute;
+  width: 50px;
+  top: 30px;
 }
 
 .logo-container {
   display: flex;
   align-items: center;
+  width: 100%;
+  justify-content: center;
+}
+
+.logo-container a {
+  display: flex;
 }
 
 .logo {
-  width: 100px;
+  height: 65px;
 }
 
 /* Sadržaj (gura dole footer i nav) */
@@ -45,7 +57,7 @@ html, body {
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 25px;
 }
 
 /* Bottom Nav (NAV uvek iznad footera) */
@@ -63,4 +75,5 @@ html, body {
   color: #fff;
   padding: 10px;
   text-align: center;
+  width: 100%;
 }
